--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -371,6 +371,11 @@
     <name>MatchingRules</name>
   </types>
   <types>
+    <members>LightningExperiencePilotCommunications</members>
+    <members>LightningExperiencePilotSales</members>
+    <name>PermissionSet</name>
+  </types>
+  <types>
     <members>Admin</members>
     <members>Analytics Cloud Integration User</members>
     <members>Analytics Cloud Security User</members>
